tests/spec/core_functions/color/change_color/error/mod.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/change_color/error"

#[allow(unused)]
use super::runner;

mod args;

mod bounds;

mod mixed_formats;

mod test_type;

mod units;
